fixed emoji showing up on mobile and font

--- a/src/app.css
+++ b/src/app.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .comic-sans {
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans MS", "Comic Sans", sans-serif;
 }
